Add GitHub Actions workflows for build, coverage, and package publishing; include git hooks for Kotlin linting

--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,12 @@ allOpen {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.register("installGitHooks", Exec) {
+    group = "setup"
+    description = "Install git hooks"
+    commandLine "git", "config", "core.hooksPath", ".github/hooks"
+    doLast {
+        println("Hooks configured via core.hooksPath")
+    }
+}
