Normalize job names in GitHub Actions workflows for consistency

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   coverage:
-    name: Kover Coverage
+    name: coverage kover
     runs-on: ubuntu-latest
     permissions:
       contents: read
