--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
     id 'org.jlleitschuh.gradle.ktlint' version '13.0.0'
-    id 'org.jetbrains.kotlinx.kover' version '0.8.3'
+    id("org.jetbrains.kotlinx.kover") version "0.9.2"
 }
 
 group = 'com.ingsis.grupo10'
