--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.25'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.jlleitschuh.gradle.ktlint' version '13.0.0'
-    id("org.jetbrains.kotlinx.kover") version "0.9.2"
+    id 'maven-publish'
+    id 'org.jetbrains.kotlinx.kover' version '0.9.2'
 }
 
 group = 'com.ingsis.grupo10'
@@ -31,7 +31,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
-    apply plugin: 'maven-publish'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
@@ -68,14 +67,14 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
             groupId = project.group
-            artifactId = "printscript-${project.name}"
+            artifactId = "${project.name}-service"
             version = project.version
         }
     }
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/IngSisG10/printscript-tp1")
+            url = uri("https://maven.pkg.github.com/IngSisG10/printscript-service")
             credentials {
                 username = System.getenv("GITHUB_ACTOR") ?: env.getProperty("GITHUB_ACTOR") ?: ""
                 password = System.getenv("GITHUB_TOKEN") ?: env.getProperty("GITHUB_TOKEN") ?: ""
