--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
     id 'maven-publish'
     id 'org.jetbrains.kotlinx.kover' version '0.9.2'
+    id 'org.jlleitschuh.gradle.ktlint' version '13.0.0'
 }
 
 group = 'com.ingsis.grupo10'
