--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
 jobs:
   coverage:
     name: coverage kover
@@ -27,6 +30,9 @@ jobs:
 
       - name: Run tests and Kover coverage
         run: ./gradlew clean test koverXmlReport koverHtmlReport --stacktrace
+        env:
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload coverage HTML
         uses: actions/upload-artifact@v4
