Fix syntax error in GitHub Actions workflow for Docker image deployment: correct image variable assignment

--- a/.github/workflows/ghcr_deploy_docker_image.yml
+++ b/.github/workflows/ghcr_deploy_docker_image.yml
@@ -28,7 +28,7 @@ jobs:
         id: tags
         run: |
           REPO_LC=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          IMAGE="ghcr.io/${REPO_LC}
+          IMAGE="ghcr.io/${REPO_LC}"
           TAG="${{ github.event.inputs.tag || 'latest' }}"
           echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
           echo "tag=$TAG"     >> "$GITHUB_OUTPUT"
