--- a/.github/workflows/ghcr_deploy_docker_image.yml
+++ b/.github/workflows/ghcr_deploy_docker_image.yml
@@ -41,3 +41,6 @@ jobs:
           tags: |
             ${{ steps.tags.outputs.image }}:${{ steps.tags.outputs.tag }}
             ${{ steps.tags.outputs.image }}:${{ github.sha }}
+          secrets: | 
+            gpr_user=${{ github.actor }}
+            gpr_key=${{ secrets.GITHUB_TOKEN }}
