--- a/build.gradle
+++ b/build.gradle
@@ -94,8 +94,8 @@ publishing {
         maven {
             url = uri("https://maven.pkg.github.com/IngSisG10/printscript-tp1")
             credentials {
-                username = (findProperty("gpr.user") as String?) ?: System.getenv("GITHUB_ACTOR")
-                password = (findProperty("gpr.key") as String?) ?: System.getenv("GITHUB_TOKEN")
+                username = findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
