--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ repositories {
         name = "GitHubPackages"
         url = uri("https://maven.pkg.github.com/IngSisG10/printscript-tp1")
         credentials {
-            username = env?.getProperty("GITHUB_ACTOR") ?: System.getenv("GITHUB_ACTOR")
-            password = env?.getProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
+            username = findProperty("gpr.user") ?: env?.getProperty("GITHUB_ACTOR") ?: System.getenv("GITHUB_ACTOR")
+            password = findProperty("gpr.key") ?: env?.getProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
         }
     }
 }
@@ -94,8 +94,8 @@ publishing {
         maven {
             url = uri("https://maven.pkg.github.com/IngSisG10/printscript-tp1")
             credentials {
-                username = findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-                password = findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+                username = env?.getProperty("GITHUB_ACTOR") ?: System.getenv("GITHUB_ACTOR")
+                password = env?.getProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
