Update docker-compose.yml and add Dockerfile.local for local development: specify Dockerfile context and streamline build process

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.local
     container_name: printscript-service
     ports:
       - "8080:8080"
