--- a/.github/workflows/azure_deploy_image.yml
+++ b/.github/workflows/azure_deploy_image.yml
@@ -10,6 +10,15 @@ on:
         description: "Esperar SSH antes de desplegar"
         type: boolean
         default: true
+  workflow_call:
+    inputs:
+      tag:
+        type: string
+        required: false
+        default: latest
+      wait_ssh:
+        type: boolean
+        default: true
 
 permissions:
   contents: read
