Refactor Azure and new version workflows: clean up VM shutdown logic and improve tag handling

--- a/.github/workflows/azure_start_vm.yml
+++ b/.github/workflows/azure_start_vm.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   start:
     runs-on: ubuntu-latest
+    outputs:
+      pre_status: ${{ steps.get_pre.outputs.status }}
     steps:
       - name: Azure Login
         uses: azure/login@v2
