--- a/.github/workflows/new_version_workflow.yml
+++ b/.github/workflows/new_version_workflow.yml
@@ -91,6 +91,10 @@ name: new-version-workflow
 on:
   workflow_call: {}
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   publish-package:
     uses: IngSisG10/snippet-infrastructure/.github/workflows/publish_packages.yml@main
