--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,22 +10,5 @@ permissions:
 jobs:
   build:
     name: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew build
-        env:
-          GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: IngSisG10/snippet-infrastructure/.github/workflows/new_version_workflow.yml@main
+    secrets: inherit
