Update coverage workflow to use the main branch

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,5 +11,5 @@ permissions:
 jobs:
   coverage:
     name: coverage kover
-    uses: IngSisG10/snippet-infrastructure/.github/workflows/coverage.yml
+    uses: IngSisG10/snippet-infrastructure/.github/workflows/coverage.yml@main
     secrets: inherit
