--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   build:
     name: build
-    uses: IngSisG10/snippet-infrastructure/.github/workflows/new_version_workflow.yml@main
+    uses: IngSisG10/snippet-infrastructure/.github/workflows/build.yml@main
     permissions:
       contents: read
       pull-requests: write
