--- a/.github/workflows/new_version_workflow.yml
+++ b/.github/workflows/new_version_workflow.yml
@@ -2,34 +2,34 @@ name: New version workflow
 
 on:
   workflow_dispatch: {}
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  publish-package:
-    uses: IngSisG10/snippet-infrastructure/.github/workflows/publish_packages.yml@main
-    secrets: inherit
-
-  publish-img:
-    uses: IngSisG10/snippet-infrastructure/.github/workflows/publish_docker_img_to_ghcr.yml@main
+  publish-components:
+    uses: IngSisG10/snippet-infrastructure/.github/workflows/publish_components.yml@main
     secrets: inherit
 
   start-vm:
-    needs: publish-img
     uses: IngSisG10/snippet-infrastructure/.github/workflows/azure_start_vm.yml@main
     secrets: inherit
 
   deploy-azure:
-    needs: start-vm
-    uses: IngSisG10/snippet-infrastructure/.github/workflows/azure_deploy_img.yml@main
+    needs:
+      - start-vm
+      - publish-components
+    uses: IngSisG10/snippet-infrastructure/.github/workflows/azure_deploy_services.yml@main
     secrets: inherit
 
   shut-down-vm:
     needs:
-      - start-vm
       - deploy-azure
+      - start-vm
     if: ${{ needs.start-vm.outputs.pre_status == 'VM deallocated' }}
     uses: IngSisG10/snippet-infrastructure/.github/workflows/azure_stop_vm.yml@main
     secrets: inherit
