Add dev branch support to workflows and create deployment workflows for development

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,7 +3,9 @@ name: Coverage (Kover)
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - dev
 
 permissions:
   contents: read
