Add permissions for contents and packages in dev deployment workflow

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - dev
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   publish_image:
     uses: IngSisG10/snippet-infrastructure/.github/workflows/publish_dev_to_ghcr.yml@main
